tests/expectations/compiler/function/9_inputs_fail.out
Error [EPAR0370005]: expected ; -- found '}'
    --> compiler-test:16:5
     |
  16 |     }}
     |     ^
